--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hint
 description: A new Flutter application.
 
-publish_to: 'none'        
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -13,13 +13,15 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.3
-  pedantic: ^1.11.0
+
+  #state-management
+  stacked: ^2.2.5
 
   # firebase
-  firebase_core: ^1.2.0
-  firebase_auth: ^1.2.0
-  cloud_firestore: ^2.2.0
-  firebase_storage: ^8.1.0
+  firebase_core: ^1.6.0
+  firebase_auth: ^3.1.0
+  cloud_firestore: ^2.5.1
+  firebase_storage: ^10.0.3
 
   #resources
   google_fonts: ^2.1.0
@@ -70,7 +72,3 @@ flutter:
     - activities/
     - sounds/
 
-  fonts:
-    - family: SFPro
-      fonts:
-        - asset: fonts/SFProDisplay-Regular.ttf
