--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # ui
   video_player: ^2.1.4
   cached_network_image: ^3.0.0
-  photo_view: ^0.11.1
   timeago: ^3.0.2
   modal_bottom_sheet: ^2.0.0
   dismissible_page: ^0.6.3
@@ -60,6 +59,7 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^1.1.0
   build_runner: ^2.0.4
+  flutter_lints: ^1.0.0
   
 
 flutter:
