--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.3
   pedantic: ^1.11.0
-  stacked: any
+  flutter_riverpod: ^0.14.0+3
+  stacked: ^2.2.5
 
   # firebase
   firebase_core: ^1.2.0
@@ -48,10 +49,11 @@ dependencies:
   permission_handler: ^8.0.0+2
   hive: ^2.0.4
   hive_flutter: ^1.0.0
-  provider: ^5.0.0
   device_info: ^2.0.2
   logger: ^1.0.0
   sensors_plus: ^1.0.1
+  json_annotation: ^4.1.0
+  
 
 
 dev_dependencies:
@@ -60,6 +62,7 @@ dev_dependencies:
   hive_generator: ^1.1.0
   build_runner: ^2.0.4
   flutter_lints: ^1.0.0
+  json_serializable: ^5.0.1
   
 
 flutter:
