--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_riverpod: ^0.14.0+3
   cupertino_icons: ^1.0.3
   pedantic: ^1.11.0
-  flutter_riverpod: ^0.14.0+3
   stacked: ^2.2.5
 
   # firebase
@@ -24,28 +24,38 @@ dependencies:
   firebase_storage: ^8.1.0
 
   #resources
-  google_fonts: ^2.1.0
-  animations: ^2.0.0
-  email_validator: ^2.0.1
   uuid: ^3.0.4
+  tenor: ^1.0.9
   intl: ^0.17.0
   lottie: ^1.0.1
-  flutter_link_previewer: ^2.0.0
-  visibility_detector: ^0.2.0
+  animations: ^2.0.0
+  file_picker: ^4.0.3
+  google_fonts: ^2.1.0
+  pixabay_picker: ^1.0.6
+  email_validator: ^2.0.1
+  flutter_offline: ^2.0.0
+  fast_color_picker: ^0.1.1
   palette_generator: ^0.3.0
+  visibility_detector: ^0.2.0
+  native_admob_flutter: ^1.5.0
+  flutter_link_previewer: ^2.0.0
 
   # ui
+  extended_image: ^4.2.1
   video_player: ^2.1.4
   cached_network_image: ^3.0.0
   timeago: ^3.0.2
   modal_bottom_sheet: ^2.0.0
   dismissible_page: ^0.6.3
 
+
   #functional
-  path_provider: ^2.0.2
   shared_preferences: ^2.0.6
+  path_provider: ^2.0.2
+  mime: ^1.0.0
   dio: ^4.0.0
-  image_picker: ^0.7.5+3
+  video_thumbnail: ^0.4.3
+  image_picker: ^0.8.4+2
   permission_handler: ^8.0.0+2
   hive: ^2.0.4
   hive_flutter: ^1.0.0
@@ -71,4 +81,5 @@ flutter:
 
   assets:
     - images/
+    - assets/
     - activities/
