Message Bubbles Shape and Sending Image and video.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dismissible_page: ^0.6.3
   modal_bottom_sheet: ^2.0.0
   cached_network_image: ^3.0.0
+  swipe_to: ^0.1.0-nullsafety.1
 
 
   #functional
