--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   palette_generator: ^0.3.0
   visibility_detector: ^0.2.0
   native_admob_flutter: ^1.5.0
-  flutter_link_previewer: ^2.0.0
 
   # ui
   timeago: ^3.0.2
@@ -65,6 +64,7 @@ dependencies:
   video_thumbnail: ^0.4.3
   json_annotation: ^4.1.0
   string_validator: ^0.3.0
+  preload_page_view: ^0.1.6
   shared_preferences: ^2.0.6
   permission_handler: ^8.0.0+2
   
