--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   timeago: ^3.0.2
   modal_bottom_sheet: ^2.0.0
   dismissible_page: ^0.6.3
+  tcard: ^1.3.5
 
   #functional
   path_provider: ^2.0.2
