--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,14 @@ dependencies:
   native_admob_flutter: ^1.5.0
 
   # ui
+  pinput: ^1.2.1
   timeago: ^3.0.2
   video_player: ^2.1.4
+  country_picker: ^2.0.8
   extended_image: ^4.2.1
   dismissible_page: ^0.6.3
   modal_bottom_sheet: ^2.0.0
+  multi_select_flutter: ^4.0.0
   cached_network_image: ^3.0.0
 
 
@@ -55,6 +58,7 @@ dependencies:
   hive: ^2.0.4
   logger: ^1.0.0
   device_info: ^2.0.2
+  otp_autofill: ^1.1.0
   hive_flutter: ^1.0.0
   sensors_plus: ^1.0.1
   path_provider: ^2.0.2
