--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   native_admob_flutter: ^1.5.0
 
   # ui
+  tcard: ^1.3.5
   pinput: ^1.2.1
   timeago: ^3.0.2
   video_player: ^2.1.4
