--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_riverpod: ^0.14.0+3
-  cupertino_icons: ^1.0.3
-  pedantic: ^1.11.0
   stacked: ^2.2.5
+  cupertino_icons: ^1.0.3
+  flutter_riverpod: ^0.14.0+3
 
   # firebase
   firebase_core: ^1.2.0
@@ -26,7 +25,6 @@ dependencies:
   #resources
   uuid: ^3.0.4
   tenor: ^1.0.9
-  intl: ^0.17.0
   lottie: ^1.0.1
   animations: ^2.0.0
   file_picker: ^4.0.3
@@ -67,6 +65,7 @@ dependencies:
   image_picker: ^0.8.4+2
   video_thumbnail: ^0.4.3
   json_annotation: ^4.1.0
+  contacts_service: ^0.6.1
   string_validator: ^0.3.0
   preload_page_view: ^0.1.6
   shared_preferences: ^2.0.6
