--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,47 +13,47 @@ dependencies:
     sdk: flutter
 
   stacked: ^2.2.5
+  pedantic: ^1.11.0
   cupertino_icons: ^1.0.3
   flutter_riverpod: ^0.14.0+3
 
   # firebase
-  firebase_core: ^1.2.0
-  firebase_auth: ^1.2.0
-  cloud_firestore: ^2.2.0
-  firebase_storage: ^8.1.0
+  firebase_core: ^1.7.0
+  firebase_auth: ^3.1.3
+  cloud_firestore: ^2.5.3
+  firebase_storage: ^10.0.5
 
   #resources
   uuid: ^3.0.4
   tenor: ^1.0.9
+  intl: ^0.17.0
   lottie: ^1.0.1
   animations: ^2.0.0
-  file_picker: ^4.0.3
+  file_picker: ^4.1.5
   google_fonts: ^2.1.0
+  extended_image: ^5.1.2
+  country_picker: ^2.0.8
   pixabay_picker: ^1.0.6
+  video_thumbnail: ^0.4.3
   email_validator: ^2.0.1
-  flutter_offline: ^2.0.0
-  fast_color_picker: ^0.1.1
   palette_generator: ^0.3.0
   visibility_detector: ^0.2.0
   native_admob_flutter: ^1.5.0
+  flutter_link_previewer: ^2.0.0
 
   # ui
   tcard: ^1.3.5
   pinput: ^1.2.1
   timeago: ^3.0.2
   video_player: ^2.1.4
-  country_picker: ^2.0.8
-  extended_image: ^4.2.1
   dismissible_page: ^0.6.3
+  fast_color_picker: ^0.1.1
+  preload_page_view: ^0.1.6
   modal_bottom_sheet: ^2.0.0
-  multi_select_flutter: ^4.0.0
   cached_network_image: ^3.0.0
 
-
   #functional
-  dependencies:
   dio: ^4.0.0
-  mime: ^1.0.0
   hive: ^2.0.4
   logger: ^1.0.0
   device_info: ^2.0.2
@@ -62,12 +62,11 @@ dependencies:
   sensors_plus: ^1.0.1
   path_provider: ^2.0.2
   metadata_fetch: ^0.4.1
-  image_picker: ^0.8.4+2
-  video_thumbnail: ^0.4.3
+  image_picker: ^0.8.4+3
+  flutter_offline: ^2.0.0
   json_annotation: ^4.1.0
-  contacts_service: ^0.6.1
   string_validator: ^0.3.0
-  preload_page_view: ^0.1.6
+  contacts_service: ^0.6.1
   shared_preferences: ^2.0.6
   permission_handler: ^8.0.0+2
   
