--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   cloud_firestore: ^2.5.3
   firebase_storage: ^10.0.5
 
+  # appwrite
+  appwrite: ^2.0.3
+  dart_appwrite: ^1.0.2
+
   #resources
   uuid: ^3.0.4
   tenor: ^1.0.9
@@ -69,6 +73,8 @@ dependencies:
   contacts_service: ^0.6.1
   shared_preferences: ^2.0.6
   permission_handler: ^8.0.0+2
+  flutter_libphonenumber: ^1.2.1
+  intl_phone_number_input: ^0.7.0+2
   
 
 
