--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   palette_generator: ^0.3.0
   visibility_detector: ^0.2.0
   flutter_link_previewer: ^2.0.0
+  intl_phone_number_input: ^0.7.0+2
 
   # ui
   tcard: ^1.3.5
