--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   preload_page_view: ^0.1.6
   modal_bottom_sheet: ^2.0.0
   cached_network_image: ^3.0.0
+  custom_rounded_rectangle_border: ^0.2.0-nullsafety.0
 
   #functional
   dio: ^4.0.0
