--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   appwrite: ^2.0.3
   dart_appwrite: ^1.0.2
 
+
+  #animations
+  animated_background: ^2.0.0
+
   #resources
   uuid: ^3.0.4
   tenor: ^1.0.9
@@ -49,6 +53,7 @@ dependencies:
   tcard: ^1.3.5
   pinput: ^1.2.1
   timeago: ^3.0.2
+  confetti: ^0.6.0
   video_player: ^2.1.4
   dismissible_page: ^0.6.3
   fast_color_picker: ^0.1.1
