--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,10 @@ dependencies:
   # firebase
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3
+  geoflutterfire: ^3.0.1
   cloud_firestore: ^2.5.3
   firebase_storage: ^10.0.5
-
-  # appwrite
-  appwrite: ^2.0.3
-  dart_appwrite: ^1.0.2
-
+  firebase_database: ^8.1.0
 
   #animations
   animated_background: ^2.0.0
