--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_auth: ^3.1.3
   cloud_firestore: ^2.5.3
   firebase_storage: ^10.0.5
+  firebase_database: ^8.1.0
 
   #resources
   uuid: ^3.0.4
