--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
     sdk: flutter
 
   stacked: ^2.2.5
-  pedantic: ^1.11.0
   cupertino_icons: ^1.0.3
   flutter_riverpod: ^0.14.0+3
 
@@ -26,42 +25,31 @@ dependencies:
 
   #resources
   uuid: ^3.0.4
-  tenor: ^1.0.9
   intl: ^0.17.0
   lottie: ^1.0.1
-  animations: ^2.0.0
   file_picker: ^4.1.5
-  google_fonts: ^2.1.0
   extended_image: ^5.1.2
   country_picker: ^2.0.8
-  pixabay_picker: ^1.0.6
-  video_thumbnail: ^0.4.3
   email_validator: ^2.0.1
-  palette_generator: ^0.3.0
-  visibility_detector: ^0.2.0
-  native_admob_flutter: ^1.5.0
-  flutter_link_previewer: ^2.0.0
 
   # ui
-  tcard: ^1.3.5
+  animations: ^2.0.2
   pinput: ^1.2.1
   timeago: ^3.0.2
   video_player: ^2.1.4
-  dismissible_page: ^0.6.3
-  fast_color_picker: ^0.1.1
   preload_page_view: ^0.1.6
   modal_bottom_sheet: ^2.0.0
-  cached_network_image: ^3.0.0
   confetti: ^0.6.0
   animated_background: ^2.0.0
   flutter_reaction_button: ^2.0.0+1
+  flutter_feather_icons: ^2.0.0+1
+  flutter_staggered_grid_view: ^0.4.1
 
   #functional
   dio: ^4.0.0
   hive: ^2.0.4
   logger: ^1.0.0
   device_info: ^2.0.2
-  otp_autofill: ^1.1.0
   hive_flutter: ^1.0.0
   sensors_plus: ^1.0.1
   path_provider: ^2.0.2
@@ -74,14 +62,12 @@ dependencies:
   shared_preferences: ^2.0.6
   permission_handler: ^8.0.0+2
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^1.1.0
   build_runner: ^2.0.4
   flutter_lints: ^1.0.0
-  json_serializable: ^5.0.1
   
 
 flutter:
