--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   hive_flutter: ^1.0.0
   sensors_plus: ^1.0.1
   path_provider: ^2.0.2
+  pixabay_picker: ^1.0.6
   metadata_fetch: ^0.4.1
   image_picker: ^0.8.4+3
   flutter_offline: ^2.0.0
