--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
   stacked: ^2.2.5
   cupertino_icons: ^1.0.3
-  flutter_riverpod: ^0.14.0+3
+  flutter_riverpod: ^1.0.2
 
   # firebase
   firebase_core: ^1.7.0
@@ -22,14 +22,13 @@ dependencies:
   geoflutterfire: ^3.0.1
   cloud_firestore: ^2.5.3
   firebase_storage: ^10.0.5
-  firebase_database: ^8.1.0
+  firebase_database: ^9.0.2
 
   #resources
   uuid: ^3.0.4
   intl: ^0.17.0
   lottie: ^1.0.1
   file_picker: ^4.1.5
-  extended_image: ^5.1.2
   country_picker: ^2.0.8
   email_validator: ^2.0.1
 
@@ -45,6 +44,7 @@ dependencies:
   flutter_reaction_button: ^2.0.0+1
   flutter_feather_icons: ^2.0.0+1
   flutter_staggered_grid_view: ^0.4.1
+  cached_network_image: ^3.2.0
 
   #functional
   dio: ^4.0.0
@@ -62,7 +62,7 @@ dependencies:
   string_validator: ^0.3.0
   contacts_service: ^0.6.1
   shared_preferences: ^2.0.6
-  permission_handler: ^8.0.0+2
+  permission_handler: ^8.3.0
   filesize: ^2.0.1
 
 dev_dependencies:
