--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-perf'
 }
+//added at the bottom of the file
+apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.firebase.firebase-perf'
