--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -59,5 +59,8 @@
             android:value="ca-app-pub-7387090577946198~6382653635"/>
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC_z4XfnQM4g8Fjbu0U3ItixYooGc4zarM"/> 
+        <meta-data
+            android:name="firebase_performance_logcat_enabled"
+            android:value="true" />
     </application>
 </manifest>
