--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,10 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
+        //added for crashylytics
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        //added for firebase performance
+        classpath 'com.google.firebase:perf-plugin:1.4.0'
     }
 }
 
