--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   cupertino_icons: ^1.0.3
   flutter_riverpod: ^1.0.2
 
+  # intro_animation
+  animated_text_kit: ^4.2.1
+  spring: ^2.0.2
+  smooth_page_indicator: ^1.0.0+2
+
   # firebase
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3
