--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,14 @@ dev_dependencies:
   hive_generator: ^1.1.0
   build_runner: ^2.0.4
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^1.3.3
+
+flutter_native_splash:
+  color: "#ffffff"
+  color_dark: "#121212"
+  image: assets/splash_icon.png
+  android: true
+  ios: true
 
 
 flutter:
