--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <application
         android:requestLegacyExternalStorage="true"
-        android:label="hint"
+        android:label="Convo"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
