--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,14 @@ dependencies:
   # firebase
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3
-  cloud_firestore: ^2.5.3
+  cloud_firestore: ^3.1.5
   firebase_storage: ^10.0.5
   firebase_database: ^9.0.4
   firebase_messaging: ^11.2.4
   firebase_crashlytics: ^2.4.4
   # firebase_performance: ^0.8.0+3
   cloud_functions: ^3.2.4
+  flutterfire_ui: ^0.3.0
 
   #resources
   uuid: ^3.0.4
