--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,13 +51,11 @@ dependencies:
   flutter_markdown: ^0.6.9
   flutter_feather_icons: ^2.0.0+1
   cached_network_image: ^3.2.0
-  video_thumbnail: ^0.4.3
   webview_flutter: ^3.0.0
 
   #functional
   hive: ^2.0.4
   logger: ^1.0.0
-  filesize: ^2.0.1
   device_info: ^2.0.2
   hive_flutter: ^1.0.0
   pixabay_picker: ^1.0.6
@@ -70,8 +68,8 @@ dependencies:
   get_it: ^7.2.0
   share_plus: ^3.0.4
   awesome_notifications: ^0.6.19
-  file_sizes: ^1.0.6
   path_provider: ^2.0.8
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_test:
