--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_feather_icons: ^2.0.0+1
   cached_network_image: ^3.2.0
   webview_flutter: ^3.0.0
+  swipe_deck: ^1.1.0
 
   #functional
   hive: ^2.0.4
