--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   cached_network_image: ^3.2.0
   webview_flutter: ^3.0.0
   swipe_deck: ^1.1.0
+  gmo_media_picker: ^0.0.4
+  flutter_parsed_text: ^2.2.1
 
   #functional
   hive: ^2.0.4
@@ -66,6 +68,7 @@ dependencies:
   permission_handler: ^8.3.0
   extended_image: ^6.0.1
   get_it: ^7.2.0
+  insta_public_api: ^0.1.2
   share_plus: ^3.0.4
   awesome_notifications: ^0.6.19
   path_provider: ^2.0.8
