--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <application
         android:requestLegacyExternalStorage="true"
         android:label="Convo"
+        android:allowBackup="true"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
